# COMP4027

./: .gitignore  .gitmodules  CHANGELOG.md  COMP4027.cabal  InitModel.hi  MLP_sequential.lhs  MLP_training_MNIST.hi  MNIST.hs  README.md  SGDF.hi  SGDF.lhs  TrainedModel.lhs  Types.lhs  shell.nix  trained_model
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: InitModel.lhs  MLP_proof_of_concept.hi  MLP_proof_of_concept.lhs  MLP_testing_MNIST.hi  MLP_testing_MNIST.hs  MLP_testing_MNIST.lhs  MLP_training_MNIST.lhs  MLP_utils.hi  MLP_utils.lhs  MNIST.hi  MNIST.hs  TrainedModel.hi  Types.hi  Types.lhs
