cabal-version:      2.4
name:               COMP4027
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Luke
maintainer:         luke@supercede.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
  exposed-modules: MLP_testing_MNIST, MLP_training_MNIST
  other-modules: MLP_utils, MNIST, SGDF, Types
  hs-source-dirs:   src
  build-depends:
      ad ==4.5.2
    , base ^>=4.14.1.0
    , random ==1.2.0
    , JuicyPixels ==3.3.5
    , JuicyPixels-util ==0.2
    , bytestring ==0.10.12.0
    , matrix ==0.3.6.1
    , split ==0.2.3.5
    , parallel ==3.2.2.0
    , time ==1.9.3
    , text
    , mtl
    , deepseq ==1.4.4.0
